--- a/public/css/custom_styles.css
+++ b/public/css/custom_styles.css
@@ -4,6 +4,12 @@
     text-align: center;
 }
 
+.shadow1 {
+    width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+}
+
 .addUser {
     margin-bottom: 5px;
 }
