--- a/public/css/custom_styles.css
+++ b/public/css/custom_styles.css
@@ -31,3 +31,7 @@
 .bt a:hover {
     transform: scale(1.05);
 }
+
+.elshad {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
